Remove redundant css fix for md-list squashed text
It exists now in angular material 0.11.1

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -175,25 +175,14 @@ md-input-container.md-icon-float > .icon + label + md-select {
  * fixes
  */
 /*
- * List height should be 48px. fix should be available in 0.11.1
+ * List height should be 48px. fix should be available in 0.12
  * https://github.com/angular/material/issues/4208
  */
 md-list-item > div.md-primary > md-icon, md-list-item > div.md-secondary > md-icon, md-list-item > md-icon:first-child, md-list-item > md-icon.md-secondary, md-list-item .md-list-item-inner > div.md-primary > md-icon, md-list-item .md-list-item-inner > div.md-secondary > md-icon, md-list-item .md-list-item-inner > md-icon:first-child, md-list-item .md-list-item-inner > md-icon.md-secondary {
     margin-top: 12px;
 }
 md-list-item, md-list-item .md-list-item-inner {
-  min-height: 48px;
-}
-
-/*
- * Fix should be availabe in ngMaterial 0.11.1
- * https://github.com/angular/material/issues/2199
- */
-md-list-item .md-list-item-text.cut-text h3 {
-    line-height: 1em !important;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    min-height: 48px;
 }
 
 /*
